--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,24 +1,24 @@
-.header{
-    text-align: center;  
-}
 .header img{
-    height: 80px;   
+    height: 80px;
+
+}
+.header{
+    text-align: center;
 }
 
 .header nav{
     background-color: black;
-    text-align: start;
-    line-height: 40px;
-    font-size: 18px;
-    
+    line-height : 40px;
+    font-size: 20px;
 }
- nav a{
+
+nav a{
     text-decoration: none;
     color: white;
-    margin-left: 30px;
-    padding: 5px;
+    margin-right: 20px;
+    padding : 5px;
 }
+
 nav a:hover{
-    background-color: lightgray;
-    
+    background-color : gray;
 }
